--- a/BookSearch/app/src/main/res/values/strings.xml
+++ b/BookSearch/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_detail_actvity">DetailActvity</string>
     <string name="action_settings">Settings</string>
     <string name="network_failed">Check your internet connection and restart the application</string>
+    <string name="download_text">Downloading books...</string>
+    <string name="download_header">Please wait...</string>
 
 </resources>
